--- a/demo/index.html
+++ b/demo/index.html
@@ -28,7 +28,7 @@
 						<button class="stop btn btn-danger">Stop</button>
 						<select class="form-control select-interpolation">
 							<option value="elastic">Elastic</option>
-							<option value="linear">Linear</option>
+							<option value="basic">Basic</option>
 							<option value="bounce">Bounce</option>
 						</select>
 					</div>
